# mausam

./: .env.example  .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  README.md  justfile
.cargo/: config.toml
.github/workflows/: docs..yml  docs.yml  rust-clippy.yml
docs/: .future-incompat-report.json  .rustc_info.json
docs/doc/: crates.js  help.html  search-index.js  settings.html  source-files.js
docs/doc/implementors/clap/derive/: trait.Args.js  trait.CommandFactory.js  trait.FromArgMatches.js  trait.Parser.js
docs/doc/implementors/core/clone/: trait.Clone.js
docs/doc/implementors/core/cmp/: trait.PartialEq.js
docs/doc/implementors/core/default/: trait.Default.js
docs/doc/implementors/core/fmt/: trait.Debug.js
docs/doc/implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
docs/doc/implementors/core/ops/deref/: trait.Deref.js
docs/doc/implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
docs/doc/implementors/lazy_static/: trait.LazyStatic.js
docs/doc/implementors/serde/de/: trait.Deserialize.js  trait.Visitor.js
docs/doc/implementors/serde/ser/: trait.Serialize.js
docs/doc/mausam/: all.html  fn.main.html  index.html  sidebar-items.js
docs/doc/mausam/app/: constant.APP_NAME.html  fn.__stability.html  fn.__static_ref_initialize.html  fn.fetch_weather_notify.html  fn.is_err_panic.html  fn.round_f32_dp.html  fn.run.html  index.html  opaque..html  sidebar-items.js  static.LAZY.html  struct.CLIENT.html  struct.IP_API_URL.html  struct.NotifyData.html
docs/doc/mausam/app/archive/: fn.maxminddb_main.html  index.html  sidebar-items.js
docs/doc/mausam/app/ipapi/: constant.FIELDS.html  enum.__Field.html  fn.get_ip_api_location.html  fn.get_location.html  fn.try_ipapi_location.html  index.html  opaque..html  sidebar-items.js  struct.IpApiResponse.html  struct.__FieldVisitor.html  struct.__Visitor.html  type.ResultIpApi.html
docs/doc/mausam/app/temperature/: fn.from_c_to_f.html  fn.from_c_to_k.html  fn.from_f_to_c.html  fn.from_f_to_k.html  fn.from_k_to_c.html  fn.from_k_to_f.html  index.html  sidebar-items.js
docs/doc/mausam/cli/: index.html  struct.Cli.html
docs/doc/mausam/models/: constant.FIELDS.html  enum.__Field.html  index.html  sidebar-items.js  struct.Clouds.html  struct.Coord.html  struct.Main.html  struct.OpenWeatherData.html  struct.Sys.html  struct.WeatherEntity.html  struct.Wind.html  struct.__FieldVisitor.html  struct.__Visitor.html
docs/doc/src/mausam/: app.rs.html  cli.rs.html  main.rs.html  models.rs.html
docs/doc/src/mausam/app/: temperature.rs.html
src/: app.rs  cli.rs  config.rs  lib.rs  main.rs  models.rs
src/app/: temperature.rs
