[package]
name = "mausam"
version = "0.1.0"
edition = "2021"
description = """
A weather update desktop notifier made with Rust.
"""
readme = "README.md"
categories = ["command-line-interface"]
keywords = ["cli", "api", "weather", "notification"]
include = [
  "src/**/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
  # "examples/**/*"
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.1.4", features = ["derive"] }
dotenv = "0.15.0"
log = "0.4.17"
notify-rust = "4.7.0"
pretty_env_logger = "0.4.0"
reqwest = { version = "0.11", features = ["json"] }
rust_decimal = "1.28.0"
rust_decimal_macros = "1.28.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
pretty_assertions = "1.3.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = 3
debug = false
lto = true
incremental = true
codegen-units = 1
